# shree-macro-flow-tauri

./: .editorconfig  .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts  vitest.config.ts  拆塔内功计算器4.1.1.3 （最终版）.xlsx  防守内功计算器.xlsx
.agents/skills/create-nishuihan-theme/: SKILL.md
.github/workflows/: gitee-release.yml
docs/: internal-skill-calculator-prd.md  release.md  theme-authoring.md  tower-demolition-calculator-rules.md
scripts/: publish-gitee.ps1
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  desktop.rs  game_recorder.rs  input.rs  internal_skill_ai.rs  lib.rs  main.rs  model.rs  raw_input.rs  shortcuts.rs  state.rs  store.rs  updater.rs
src/assets/: main.css
src/components/layout/: WindowTitleBar.css  WindowTitleBar.tsx  WorkspaceHeader.test.tsx  WorkspaceHeader.tsx
src/components/panels/: ControlPanel.test.tsx  ControlPanel.tsx  FlowPanel.test.tsx  FlowPanel.tsx  LogPanel.test.tsx  LogPanel.tsx  ProfilePanel.test.tsx  ProfilePanel.tsx  SettingsPanel.test.tsx  (+1 more)
src/hooks/: useAppUpdater.test.tsx  useAppUpdater.ts  useGameRecorderController.test.tsx  useGameRecorderController.ts  useMacroController.test.tsx  useMacroController.ts
src/lib/: install-blocking.test.ts  install-blocking.ts  macro-api.ts
src/test/: setup.ts  test-utils.tsx
src/themes/: ThemeProvider.tsx  index.ts  registry.test.ts  registry.ts  themes.css  types.ts
(+57 files in other folders)
